--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <!--Card Bottom End -->
                 </div>
                 <span class="open-source">
-                    <a class="open" target="_blank" href="https://github.com/dargud/weather"> Open
+                    <a class="open" target="_blank" href="https://github.com/dargud/weather-test-app"> Open
                         Source</a>
                     by Darina Gudyma
                 </span>
