--- a/index.html
+++ b/index.html
@@ -1,120 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What's Da Weather</title>
-    <link rel="shortcut icon" type="image/jpg" href="./images/icons/stars.png" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather app</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="/src/style.css">
-    <script src="https://use.fontawesome.com/96ba741ff3.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&amp;display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-</head>
-
-<body>
-    <!--Main Container -->
+    <script
+      src="https://kit.fontawesome.com/4db623329b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="src/style.css" />
+  </head>
+  <body>
     <div class="container">
-        <!--Card -->
-        <div class="row card-row justify-content-center">
-            <div class="col-12 card-column">
-                <div id="card" class="card card-main-body shadow">
-                    <!--Card Top -->
-                    <div class="card-top">
-                        <div class="row">
-                            <!--Search bar start -->
-                            <div class="col-12 input-col">
-                                <form class="input-group" id="search-form">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="current-location-addon">
-                                            <img class="current-location" src="/images/icons/current-location.svg"
-                                                alt="">
-                                        </span>
-                                    </div>
-                                    <input id="search-input" type="text" class="form-control" placeholder="enter city"
-                                        aria-label="enter city" autocomplete="off" autofocus="on">
-                                    <!--Search bar button start -->
-                                    <div class="input-group-append">
-                                        <input class="btn button search-button" type="submit" value="Search">
-                                    </div>
-                                    <!--Search bar button end -->
-                                </form>
-                            </div>
-                            <!--Search bar end -->
-                        </div>
-                    </div>
-                    <!--Card Top End -->
-                    <!--Card Middle Body Start -->
-                    <!--City not found message start -->
-                    <div class="row">
-                        <div class="col-12 city-error">
-                            <span class="city-not-found"></span>
-                        </div>
-                    </div>
-                    <!--City not found message end -->
-                    <div class="row card-middle-body">
-                        <!--Card Middle Text Start -->
-                        <div class="col-6 text-wrapper">
-                            <img class="primary-weather-icon" id="primary-icon" src="./images/icons/nothing.png"
-                                alt="weather-icon">
-                            <h2 class="city-name" id="current-city">London</h2>
-                            <p id="current-time"></p>
-                            <p class="temperature" id="current-temperature"></p>
-                            <span class="temperature-unit measure" id="temperature-meassure">
-                                <a id="degreesCelsius" class="active" href="">°C</a>
-                                |
-                                <a id="degreesFahr" class="inactive" href="">°F</a>
-                            </span>
-                            <p id="weather-description"></p>
-                            <div class="row">
-                                <div class="col-12 additional-weather-wrapper">
-                                    <div class="row additional-weather-info">
-                                        <div class="col-6 col-smaller">
-                                            <img class="weather-icon-small" src="images/icons/winds.svg" alt="winds">
-                                            <span class="wind" id="wind-speed"></span>
-                                        </div>
-                                        <div class="col-6 col-smaller">
-                                            <img class="weather-icon-small" src="./images/icons/raindrops.svg"
-                                                alt="raindrops">
-                                            <span class="chance-of-rain" id="humidity"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Card Middle Text End -->
-                        <!--Illustration Start -->
-                        <div class="col-6 illustration-col">
-                            <div class="illustration">
-                                <img id="main-illustration" src="./images/illustrations/Spinner-0.4s-8px.svg"
-                                    alt="windy">
-                            </div>
-                            <!--Illustration End -->
-                        </div>
-                    </div>
-                    <!--Card Middle Body End -->
-                    <!--Card Bottom start -->
-                    <div class="card-bottom card-text">
-                        <p class="check-additonal-hours">
-                            Check the weather for next few hours
-                        </p>
-                        <div class="row" id="forecast"></div>
-                    </div>
-                    <!--Card Bottom End -->
-                </div>
-                <span class="open-source">
-                    <a class="open" target="_blank" href="https://github.com/dargud/weather-test-app"> Open
-                        Source</a>
-                    by Darina Gudyma
-                </span>
+      <div
+        class="containerClear containerCloudy containerMist containerRaining containerSnow containerThunderstorm"
+        id="background-image"
+      >
+        <div class="row">
+          <div class="col">
+            <div class="col-city">
+              <h1 id="city"></h1>
+              <span class="current-weather">| Current Weather</span>
             </div>
-        </div>
-        <!--Card End -->
-    </div>
-    <!--Main Container End -->
-    <script src="/src/index.js"></script>
-</body>
 
+            <div class="col-celsius-fahrenheit">
+              <span id="units">
+                <a href="#" class="celsius-link" id="celsius-link">°C </a>
+                |
+                <a href="#" class="fahrenheit-link" id="fahrenheit-link"> °F</a>
+              </span>
+            </div>
+
+            <div class="row">
+              <div class="col-md-5">
+                <div class="clearfix">
+                  <h2 id="temperature"></h2>
+                  <span class="temperature-degree">°</span>
+                </div>
+              </div>
+              <div class="col-md-7">
+                <div class="col-humor-quote">
+                  <p id="quote"></p>
+                </div>
+                <div class="description">
+                  <p id="description"></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-day-settings">
+              <hr class="hr-day" />
+              <div class="current-time-date">
+                <p id="current-time-date-year"></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <div class="col-search-engine">
+              <form id="search-city">
+                <input
+                  type="search"
+                  placeholder="Enter a city"
+                  autocomplete="off"
+                  class="search-city"
+                  id="city-input"
+                />
+                <input
+                  type="submit"
+                  value="Search"
+                  class="submit-button"
+                  id="search-button"
+                />
+              </form>
+
+              <i class="fas fa-map-marker-alt" id="current-location"></i>
+            </div>
+
+            <div class="col-weather-specifications">
+              <div class="weather-details">
+                <p>Weather details</p>
+              </div>
+
+              <div class="temperature">
+                <p>Temperature</p>
+                <span class="temperature-values">
+                  <p id="max-temperature"></p>
+                  <p id="min-temperature"></p>
+                </span>
+              </div>
+
+              <div class="feels-like">
+                <p>Feels like</p>
+                <p class="temperature-feels-like" id="feels-like"></p>
+              </div>
+
+              <div class="humidity">
+                <p>Humidity</p>
+                <p class="humidity-value" id="humidity"></p>
+              </div>
+
+              <div class="wind">
+                <p>Wind</p>
+                <p class="wind-value" id="wind"></p>
+              </div>
+            </div>
+
+            <div class="col-future-weather">
+              <div class="forecast-details"><p>Forecast</p></div>
+              <div class="forecast-structure" id="forecast"></div>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <a
+            href="https://github.com/ana-coimbra/shecodes-plus-weather-app"
+            target="_blank"
+            class="git-hub-repository"
+            >Open-source code
+          </a>
+          by
+          <a
+            href="http://https://www.linkedin.com/in/ana-ribeiro-coimbra/"
+            target="_blank"
+            class="linkeding-profile"
+          >
+            Ana Coimbra</a
+          >
+        </footer>
+      </div>
+    </div>
+    <script src="src/script.js"></script>
+  </body>
 </html>
