--- a/index.html
+++ b/index.html
@@ -1,142 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather app</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script
-      src="https://kit.fontawesome.com/4db623329b.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
+    <script src="https://kit.fontawesome.com/4db623329b.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
     <link rel="stylesheet" href="src/style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <div
-        class="containerClear containerCloudy containerMist containerRaining containerSnow containerThunderstorm"
-        id="background-image"
-      >
-        <div class="row">
-          <div class="col">
-            <div class="col-city">
-              <h1 id="city"></h1>
-              <span class="current-weather">| Current Weather</span>
-            </div>
-
-            <div class="col-celsius-fahrenheit">
-              <span id="units">
-                <a href="#" class="celsius-link" id="celsius-link">°C </a>
-                |
-                <a href="#" class="fahrenheit-link" id="fahrenheit-link"> °F</a>
-              </span>
-            </div>
-
+        <div class="containerClear containerCloudy containerMist containerRaining containerSnow containerThunderstorm"
+            id="background-image">
             <div class="row">
-              <div class="col-md-5">
-                <div class="clearfix">
-                  <h2 id="temperature"></h2>
-                  <span class="temperature-degree">°</span>
+                <div class="col">
+                    <div class="col-city">
+                        <h1 id="city"></h1>
+                        <span class="current-weather">| Current Weather</span>
+                    </div>
+
+                    <div class="col-celsius-fahrenheit">
+                        <span id="units">
+                            <a href="#" class="celsius-link" id="celsius-link">°C </a>
+                            |
+                            <a href="#" class="fahrenheit-link" id="fahrenheit-link"> °F</a>
+                        </span>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="clearfix">
+                                <h2 id="temperature"></h2>
+                                <span class="temperature-degree">°</span>
+                            </div>
+                        </div>
+                        <div class="col-md-7">
+                            <div class="col-humor-quote">
+                                <p id="quote"></p>
+                            </div>
+                            <div class="description">
+                                <p id="description"></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-day-settings">
+                        <hr class="hr-day" />
+                        <div class="current-time-date">
+                            <p id="current-time-date-year"></p>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-md-7">
-                <div class="col-humor-quote">
-                  <p id="quote"></p>
+
+                <div class="col-4">
+                    <div class="col-search-engine">
+                        <form id="search-city">
+                            <input type="search" placeholder="Enter a city" autocomplete="off" class="search-city"
+                                id="city-input" />
+                            <input type="submit" value="Search" class="submit-button" id="search-button" />
+                        </form>
+
+                        <i class="fas fa-map-marker-alt" id="current-location"></i>
+                    </div>
+
+                    <div class="col-weather-specifications">
+                        <div class="weather-details">
+                            <p>Weather details</p>
+                        </div>
+
+                        <div class="temperature">
+                            <p>Temperature</p>
+                            <span class="temperature-values">
+                                <p id="max-temperature"></p>
+                                <p id="min-temperature"></p>
+                            </span>
+                        </div>
+
+                        <div class="feels-like">
+                            <p>Feels like</p>
+                            <p class="temperature-feels-like" id="feels-like"></p>
+                        </div>
+
+                        <div class="humidity">
+                            <p>Humidity</p>
+                            <p class="humidity-value" id="humidity"></p>
+                        </div>
+
+                        <div class="wind">
+                            <p>Wind</p>
+                            <p class="wind-value" id="wind"></p>
+                        </div>
+                    </div>
+
+                    <div class="col-future-weather">
+                        <div class="forecast-details">
+                            <p>Forecast</p>
+                        </div>
+                        <div class="forecast-structure" id="forecast"></div>
+                    </div>
                 </div>
-                <div class="description">
-                  <p id="description"></p>
-                </div>
-              </div>
             </div>
-
-            <div class="col-day-settings">
-              <hr class="hr-day" />
-              <div class="current-time-date">
-                <p id="current-time-date-year"></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-4">
-            <div class="col-search-engine">
-              <form id="search-city">
-                <input
-                  type="search"
-                  placeholder="Enter a city"
-                  autocomplete="off"
-                  class="search-city"
-                  id="city-input"
-                />
-                <input
-                  type="submit"
-                  value="Search"
-                  class="submit-button"
-                  id="search-button"
-                />
-              </form>
-
-              <i class="fas fa-map-marker-alt" id="current-location"></i>
-            </div>
-
-            <div class="col-weather-specifications">
-              <div class="weather-details">
-                <p>Weather details</p>
-              </div>
-
-              <div class="temperature">
-                <p>Temperature</p>
-                <span class="temperature-values">
-                  <p id="max-temperature"></p>
-                  <p id="min-temperature"></p>
-                </span>
-              </div>
-
-              <div class="feels-like">
-                <p>Feels like</p>
-                <p class="temperature-feels-like" id="feels-like"></p>
-              </div>
-
-              <div class="humidity">
-                <p>Humidity</p>
-                <p class="humidity-value" id="humidity"></p>
-              </div>
-
-              <div class="wind">
-                <p>Wind</p>
-                <p class="wind-value" id="wind"></p>
-              </div>
-            </div>
-
-            <div class="col-future-weather">
-              <div class="forecast-details"><p>Forecast</p></div>
-              <div class="forecast-structure" id="forecast"></div>
-            </div>
-          </div>
+            <footer>
+                <a href="https://github.com/dargud/weather-test-app" target="_blank"
+                    class="git-hub-repository">Open-source code
+                </a>
+                by
+                <a>
+                    Darina Gudyma</a>
+            </footer>
         </div>
-        <footer>
-          <a
-            href="https://github.com/ana-coimbra/shecodes-plus-weather-app"
-            target="_blank"
-            class="git-hub-repository"
-            >Open-source code
-          </a>
-          by
-          <a
-            href="http://https://www.linkedin.com/in/ana-ribeiro-coimbra/"
-            target="_blank"
-            class="linkeding-profile"
-          >
-            Ana Coimbra</a
-          >
-        </footer>
-      </div>
     </div>
     <script src="src/script.js"></script>
-  </body>
+</body>
+
 </html>
