--- a/index.html
+++ b/index.html
@@ -90,22 +90,20 @@
                     </div>
 
                     <div class="col-future-weather">
-                        <div class="forecast-details">
-                            <p>Forecast</p>
-                        </div>
-                        <div class="forecast-structure" id="forecast"></div>
                     </div>
+                    <div class="forecast-structure" id="forecast"></div>
                 </div>
             </div>
-            <footer>
-                <a href="https://github.com/dargud/weather-test-app" target="_blank"
-                    class="git-hub-repository">Open-source code
-                </a>
-                by
-                <a>
-                    Darina Gudyma</a>
-            </footer>
         </div>
+        <footer>
+            <a href="https://github.com/dargud/weather-test-app" target="_blank" class="git-hub-repository">Open-source
+                code
+            </a>
+            by
+            <a>
+                Darina Gudyma</a>
+        </footer>
+    </div>
     </div>
     <script src="src/script.js"></script>
 </body>
